--- a/reserve.html
+++ b/reserve.html
@@ -13,14 +13,15 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="container">
-			<div class="jumbotron">
-			  <h1 class="display-3">Hot Restaurant</h1>
-			  <h2 class="display-2">Current Reservations and Waiting List</p>
-			  <p class="lead">
-			    <a class="btn btn-primary btn-lg" href="#" role="button">Make Reservation</a>
-			    <button class="btn btn-default"><i class="glyphicon glyphicon-home"></i>
-			  </p></button>
-			</div>
+				<div class="jumbotron">
+				  <h1 class="display-3">Hot Restaurant</h1>
+				  <h2 class="display-2">Current Reservations and Waiting List</h2>
+				<p class="lead">
+				    <a class="btn btn-primary btn-lg" href="#" role="button">Make Reservation</a>
+				    <button class="btn btn-default"><i class="glyphicon glyphicon-home"></i>
+				 	</button>
+				</p>
+				</div>
 			</div>
 		</div>
 	</div><!--  row -->
@@ -30,23 +31,25 @@
 			<div class="container">
 				<div class="panel panel-default">
 				  <!-- Default panel contents -->
-				  <div class="panel-heading">Panel heading</div>
-
+				  <div class="panel-heading">Current Reservations</div>
+				
 				  <!-- Table -->
+				  <div class="container">
 				  <table class="table">
-				    ...
+				    <tp>1</tp>
 				  </table>
+				</div>
 				</div>
 			</div>
 		</div>
 	</div> <!-- row -->
 
-		<div class="row">
+	<div class="row">
 		<div class="col-md-12">
 			<div class="container">
 				<div class="panel panel-default">
 				  <!-- Default panel contents -->
-				  <div class="panel-heading">Panel heading</div>
+				  <div class="panel-heading">Waiting List</div>
 
 				  <!-- Table -->
 				  <table class="table">
