--- a/reserve.html
+++ b/reserve.html
@@ -17,8 +17,8 @@
 				  <h1 class="display-3">Hot Restaurant</h1>
 				  <h2 class="display-2">Current Reservations and Waiting List</h2>
 				<p class="lead">
-				    <a class="btn btn-primary btn-lg" href="#" role="button">Make Reservation</a>
-				    <button class="btn btn-default"><i class="glyphicon glyphicon-home"></i>
+				    <a class="btn btn-primary btn-lg" href="./reserve" role="button">Make Reservation</a>
+				    <button class="btn btn-default"><i class="glyphicon glyphicon-home"><a href="./"></a></i>
 				 	</button>
 				</p>
 				</div>
